# assert-example

./: .travis.yml  CMakeLists.txt  factorial_test.cpp  main.cpp  rational.h  rational_test.cpp  readme.md  simplecompile.sh  vector_test.cpp
